--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -8,5 +8,5 @@
 {% block content %}
   <h1>Hello, world!</h1>
   <p><img src="{% static 'img/django-logo-negative.svg' %}"></p>
-  <marquee>Febia</marquee>
+  <marquee>Febia Zein</marquee>
 {% endblock content %}
