--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -2,11 +2,79 @@
 {% load static %}
 
 {% block meta %}
-<title>Hello, world!</title>
+<title>Pemograman Lanjut</title>
 {% endblock meta %}
 
 {% block content %}
-  <h1>Hello, world!</h1>
-  <p><img src="{% static 'img/django-logo-negative.svg' %}"></p>
-  <marquee>Febia Zein</marquee>
+<header>
+    <div class="container d-flex justify-content-between align-items-center">
+        <div id="logo">
+            <h7>
+                <p1 style="font-weight: bolder">Menghitung Saldo Tabungan</p1>
+            </h7>
+        </div>
+
+        <!-- .navbar -->
+    </div>
+</header>
+<!-- End Header -->
+
+<!-- ======= Hero Section ======= -->
+<section id="hero">
+    <div class="card" data-aos="zoom-out">
+        <div class="row">
+            <div class="column" style="margin-top: auto; margin-bottom: auto">
+                <table style="color: black">
+                    <tr>
+                        <td style="width: 2.5cm">Nama</td>
+                        <td>:</td>
+                        <td>Febia Zein Aziza</td>
+                    </tr>
+                    <tr>
+                        <td>NIM</td>
+                        <td>:</td>
+                        <td>181810101115</td>
+                    </tr>
+                    <tr>
+                        <td>Jurusan</td>
+                        <td>:</td>
+                        <td>Matematika</td>
+                    </tr>
+                    <tr>
+                        <td style="vertical-align: text-top">Fakultas</td>
+                        <td style="vertical-align: text-top">:</td>
+                        <td>Matematika dan Ilmu Pengetahuan Alam Universitas Jember</td>
+                    </tr>
+                </table>
+            </div>
+            <div class="column">
+                <img src="{% static 'img/sicantik.jpeg' %}" style="height: 8cm; border-radius: 30pt"/>
+            </div>
+        </div>
+    </div>
+</section>
+<form method="post">
+    {% csrf_token %}
+    <div class="mb-3">
+        <label for="formGroupExampleInput" class="form-label">Tabungan Awal </label>
+        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Input Tabungan Awal"
+               name="Tabungan Awal">
+    </div>
+     <div class="mb-3">
+        <label for="formGroupExampleInput" class="form-label">Bunga Per Tahun (%)</label>
+        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Input Bunga"
+               name="Bunga">
+    </div>
+    <div class="mb-3">
+        <label for="formGroupExampleInput" class="form-label">Lama Menabung (bulan)</label>
+        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Input Lama Menabung"
+               name="Lama">
+    </div>
+
+    <button type="submit" class="btn btn-success">Cek</button>
+    <div class="mb-3">
+        <label for="formGroupExampleOutput2" class="form-label">Jumlah Saldo</label>
+        <output type="text" class="form-control" id="formGroupExampleOutput2" name="keluar">{{keluar}}</output>
+    </div>
+</form>
 {% endblock content %}
