--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,8 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
         <a class="navbar-brand" ><img
-                src="{% static 'img/Logo_unej.png' %}"
+                src="http://kemahasiswaan.unej.ac.id/wp-content/uploads/2020/07/cropped-Logo-Baku-UNEJ-2020-Square.png
+"
                 style="height: 25pt;"/></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,11 +46,12 @@
 </div>
 
 <footer>
-    <p>Hubungi <a href="https://wa.me/qr/6SJGB6X7XUULJ1">Contac person</a>  untuk info lebih lanjut
+    <p>Hubungi <a href="https://wa.me/qr/6SJGB6X7XUULJ1">contac person</a>  untuk info lebih lanjut
         <marquee
         ><strong
         ><img
-                src="{% static 'img/Logo_unej.png' %}"
+                src="http://kemahasiswaan.unej.ac.id/wp-content/uploads/2020/07/cropped-Logo-Baku-UNEJ-2020-Square.png
+"
                 style="height: 13pt;"/>
             | Pemrograman Lanjut</strong
         ></marquee
