--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
 </div>
 
 <footer>
-    <p>Hubungi <a href="https://wa.me/qr/6SJGB6X7XUULJ1">contac person</a>  untuk info lebih lanjut
+    <p>Hubungi <a href="https://wa.me/qr/6SJGB6X7XUULJ1">contact person</a>  untuk info lebih lanjut
         <marquee
         ><strong
         ><img
